2008-02-25  Johnny Ding  <johnnyding.webkit@gmail.com>

Reviewed by Darin Adler.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17444

        In HTMLTokenizer::write, the code checks 'pendingScripts.isEmpty()' to decide
        whether to save prependingSrc or not. However, in HTMLTokenizer::scriptHandler
        and HTMLTokenizer::scriptExecution, the code checks testBit:LoadingExtScript
        to decide whether to save prependingSrc or not. The later behavior is not right
        because, in scriptHandler and scriptExecution, even the pendingScripts queue is
        empty, the testBit:LoadingExtScript might be TRUE.

        Test: fast/tokenizer/nested-multiple-scripts.html

        * html/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::scriptHandler): check pendingScripts.isEmpty() instead of
        checking state.loadingExtScript().
        (WebCore::HTMLTokenizer::scriptExecution): check pendingScripts.isEmpty() instead of
        checking state.loadingExtScript().

2008-02-25  Johnny Ding  <johnnyding.webkit@gmail.com>

        Reviewed by Darin Adler.

        - bug http://bugs.webkit.org/show_bug.cgi?id=17444
        Test for multiple nested scripts which are in a external script.

        * fast/tokenizer/nested-multiple-scripts-expected.txt: Added.
        * fast/tokenizer/nested-multiple-scripts.html: Added.
        * fast/tokenizer/resources/external-script-1.js: Added.
        * fast/tokenizer/resources/external-script-2.js: Added.


Canonical link: https://commits.webkit.org/24274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30563 268f45cc-cd09-0410-ab3c-d52691b4dbfc